# vEMstitch

./: README.md  environment.yaml
simulated_data/: get_data.py
source/: Utils.py  elastic_transform.py  main.py  refinement.py  rigid_transform.py  stitching.py
vEMstitch_c++/: CMakeLists.txt
vEMstitch_c++/include/: Utils.h  elastictransform.h  refinement.h  rigidtransform.h  stitching.h
vEMstitch_c++/src/: Utils.cpp  elastic_transform.cpp  main.cpp  refinement.cpp  rigid_transform.cpp  stitching.cpp
